--- a/style/perfil.css
+++ b/style/perfil.css
@@ -80,15 +80,17 @@ section h2 {
 .icon-stack {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: top;
     flex-direction: column;
     margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
     color: hsl(218, 44%, 22%);
+    width: 640px;
+    height: 140px;
 }
 
 .icon-stack h2 {
-    border-bottom: 2px #606060 solid;
+    border-bottom: 2px t#606060 solid;
 }
 
 .icon ul {
